etapa6/y.output
Terminals unused in grammar

   TOKEN_ERROR


State 37 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 122 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce


Grammar

    0 $accept: p $end

    1 p: programa

    2 programa: decl_global programa
    3         | def_funcao programa
    4         | /* empty */

    5 decl_global: decl_var ';'
    6            | decl_vetor ';'

    7 decl_var: KW_DECLARE TK_IDENTIFIER ':' tipo_var

    8 decl_vetor: KW_DECLARE TK_IDENTIFIER ':' tipo_var '[' LIT_INTEGER ']'

    9 tipo_var: KW_INTEGER
   10         | KW_FLOATING
   11         | KW_BOOLEAN
   12         | KW_CHARACTER

   13 def_funcao: TK_IDENTIFIER ':' tipo_var '(' lista_parametros ')' comando ';'

   14 lista_parametros: lista_param_nao_vazia
   15                 | /* empty */

   16 lista_param_nao_vazia: parametro ',' lista_param_nao_vazia
   17                      | parametro

   18 parametro: TK_IDENTIFIER ':' tipo_var

   19 comando: bloco_comando
   20        | controle_fluxo
   21        | atribuicao
   22        | input
   23        | output
   24        | return
   25        | /* empty */

   26 bloco_comando: '{' seq_comando '}'

   27 seq_comando: comando
   28            | comando ';' seq_comando

   29 atribuicao: TK_IDENTIFIER '=' expressao
   30           | TK_IDENTIFIER '[' expressao ']' '=' expressao

   31 input: KW_INPUT TK_IDENTIFIER

   32 output: KW_OUTPUT lista_expr_nao_vazia

   33 lista_expr_nao_vazia: expressao ',' lista_expr_nao_vazia
   34                     | expressao

   35 return: KW_RETURN expressao

   36 controle_fluxo: KW_IF '(' expressao ')' KW_THEN comando
   37               | KW_IF '(' expressao ')' KW_THEN comando KW_ELSE comando
   38               | KW_WHILE '(' expressao ')' comando
   39               | KW_DO comando KW_WHILE '(' expressao ')'

   40 expressao: TK_IDENTIFIER
   41          | TK_IDENTIFIER '[' expressao ']'
   42          | LIT_INTEGER
   43          | LIT_FLOATING
   44          | LIT_FALSE
   45          | LIT_TRUE
   46          | LIT_CHARACTER
   47          | LIT_STRING
   48          | expressao '+' expressao
   49          | expressao '-' expressao
   50          | expressao '*' expressao
   51          | expressao '/' expressao
   52          | expressao '<' expressao
   53          | expressao '>' expressao
   54          | '(' expressao ')'
   55          | expressao OPERATOR_LE expressao
   56          | expressao OPERATOR_GE expressao
   57          | expressao OPERATOR_EQ expressao
   58          | expressao OPERATOR_NE expressao
   59          | expressao OPERATOR_AND expressao
   60          | expressao OPERATOR_OR expressao
   61          | TK_IDENTIFIER '(' lista_expressoes ')'

   62 lista_expressoes: lista_expr_nao_vazia
   63                 | /* empty */


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 36 37 38 39 54 61
')' (41) 13 36 37 38 39 54 61
'*' (42) 50
'+' (43) 48
',' (44) 16 33
'-' (45) 49
'/' (47) 51
':' (58) 7 8 13 18
';' (59) 5 6 13 28
'<' (60) 52
'=' (61) 29 30
'>' (62) 53
'[' (91) 8 30 41
']' (93) 8 30 41
'{' (123) 26
'}' (125) 26
error (256)
KW_INTEGER (258) 9
KW_FLOATING (259) 10
KW_BOOLEAN (260) 11
KW_CHARACTER (261) 12
KW_DECLARE (262) 7 8
KW_IF (263) 36 37
KW_THEN (264) 36 37
KW_ELSE (265) 37
KW_WHILE (266) 38 39
KW_DO (267) 39
KW_INPUT (268) 31
KW_RETURN (269) 35
KW_OUTPUT (270) 32
OPERATOR_LE (271) 55
OPERATOR_GE (272) 56
OPERATOR_EQ (273) 57
OPERATOR_NE (274) 58
OPERATOR_AND (275) 59
OPERATOR_OR (276) 60
TK_IDENTIFIER (277) 7 8 13 18 29 30 31 40 41 61
LIT_INTEGER (278) 8 42
LIT_FLOATING (279) 43
LIT_FALSE (280) 44
LIT_TRUE (281) 45
LIT_CHARACTER (282) 46
LIT_STRING (283) 47
TOKEN_ERROR (284)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
p (47)
    on left: 1, on right: 0
programa (48)
    on left: 2 3 4, on right: 1 2 3
decl_global (49)
    on left: 5 6, on right: 2
decl_var (50)
    on left: 7, on right: 5
decl_vetor (51)
    on left: 8, on right: 6
tipo_var (52)
    on left: 9 10 11 12, on right: 7 8 13 18
def_funcao (53)
    on left: 13, on right: 3
lista_parametros (54)
    on left: 14 15, on right: 13
lista_param_nao_vazia (55)
    on left: 16 17, on right: 14 16
parametro (56)
    on left: 18, on right: 16 17
comando (57)
    on left: 19 20 21 22 23 24 25, on right: 13 27 28 36 37 38 39
bloco_comando (58)
    on left: 26, on right: 19
seq_comando (59)
    on left: 27 28, on right: 26 28
atribuicao (60)
    on left: 29 30, on right: 21
input (61)
    on left: 31, on right: 22
output (62)
    on left: 32, on right: 23
lista_expr_nao_vazia (63)
    on left: 33 34, on right: 32 33 62
return (64)
    on left: 35, on right: 24
controle_fluxo (65)
    on left: 36 37 38 39, on right: 20
expressao (66)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 60 61, on right: 29 30 33 34 35 36 37 38 39 41 48 49 50 51
    52 53 54 55 56 57 58 59 60
lista_expressoes (67)
    on left: 62 63, on right: 61


state 0

    0 $accept: . p $end

    KW_DECLARE     shift, and go to state 1
    TK_IDENTIFIER  shift, and go to state 2

    $default  reduce using rule 4 (programa)

    p            go to state 3
    programa     go to state 4
    decl_global  go to state 5
    decl_var     go to state 6
    decl_vetor   go to state 7
    def_funcao   go to state 8


state 1

    7 decl_var: KW_DECLARE . TK_IDENTIFIER ':' tipo_var
    8 decl_vetor: KW_DECLARE . TK_IDENTIFIER ':' tipo_var '[' LIT_INTEGER ']'

    TK_IDENTIFIER  shift, and go to state 9


state 2

   13 def_funcao: TK_IDENTIFIER . ':' tipo_var '(' lista_parametros ')' comando ';'

    ':'  shift, and go to state 10


state 3

    0 $accept: p . $end

    $end  shift, and go to state 11


state 4

    1 p: programa .

    $default  reduce using rule 1 (p)


state 5

    2 programa: decl_global . programa

    KW_DECLARE     shift, and go to state 1
    TK_IDENTIFIER  shift, and go to state 2

    $default  reduce using rule 4 (programa)

    programa     go to state 12
    decl_global  go to state 5
    decl_var     go to state 6
    decl_vetor   go to state 7
    def_funcao   go to state 8


state 6

    5 decl_global: decl_var . ';'

    ';'  shift, and go to state 13


state 7

    6 decl_global: decl_vetor . ';'

    ';'  shift, and go to state 14


state 8

    3 programa: def_funcao . programa

    KW_DECLARE     shift, and go to state 1
    TK_IDENTIFIER  shift, and go to state 2

    $default  reduce using rule 4 (programa)

    programa     go to state 15
    decl_global  go to state 5
    decl_var     go to state 6
    decl_vetor   go to state 7
    def_funcao   go to state 8


state 9

    7 decl_var: KW_DECLARE TK_IDENTIFIER . ':' tipo_var
    8 decl_vetor: KW_DECLARE TK_IDENTIFIER . ':' tipo_var '[' LIT_INTEGER ']'

    ':'  shift, and go to state 16


state 10

   13 def_funcao: TK_IDENTIFIER ':' . tipo_var '(' lista_parametros ')' comando ';'

    KW_INTEGER    shift, and go to state 17
    KW_FLOATING   shift, and go to state 18
    KW_BOOLEAN    shift, and go to state 19
    KW_CHARACTER  shift, and go to state 20

    tipo_var  go to state 21


state 11

    0 $accept: p $end .

    $default  accept


state 12

    2 programa: decl_global programa .

    $default  reduce using rule 2 (programa)


state 13

    5 decl_global: decl_var ';' .

    $default  reduce using rule 5 (decl_global)


state 14

    6 decl_global: decl_vetor ';' .

    $default  reduce using rule 6 (decl_global)


state 15

    3 programa: def_funcao programa .

    $default  reduce using rule 3 (programa)


state 16

    7 decl_var: KW_DECLARE TK_IDENTIFIER ':' . tipo_var
    8 decl_vetor: KW_DECLARE TK_IDENTIFIER ':' . tipo_var '[' LIT_INTEGER ']'

    KW_INTEGER    shift, and go to state 17
    KW_FLOATING   shift, and go to state 18
    KW_BOOLEAN    shift, and go to state 19
    KW_CHARACTER  shift, and go to state 20

    tipo_var  go to state 22


state 17

    9 tipo_var: KW_INTEGER .

    $default  reduce using rule 9 (tipo_var)


state 18

   10 tipo_var: KW_FLOATING .

    $default  reduce using rule 10 (tipo_var)


state 19

   11 tipo_var: KW_BOOLEAN .

    $default  reduce using rule 11 (tipo_var)


state 20

   12 tipo_var: KW_CHARACTER .

    $default  reduce using rule 12 (tipo_var)


state 21

   13 def_funcao: TK_IDENTIFIER ':' tipo_var . '(' lista_parametros ')' comando ';'

    '('  shift, and go to state 23


state 22

    7 decl_var: KW_DECLARE TK_IDENTIFIER ':' tipo_var .
    8 decl_vetor: KW_DECLARE TK_IDENTIFIER ':' tipo_var . '[' LIT_INTEGER ']'

    '['  shift, and go to state 24

    $default  reduce using rule 7 (decl_var)


state 23

   13 def_funcao: TK_IDENTIFIER ':' tipo_var '(' . lista_parametros ')' comando ';'

    TK_IDENTIFIER  shift, and go to state 25

    $default  reduce using rule 15 (lista_parametros)

    lista_parametros       go to state 26
    lista_param_nao_vazia  go to state 27
    parametro              go to state 28


state 24

    8 decl_vetor: KW_DECLARE TK_IDENTIFIER ':' tipo_var '[' . LIT_INTEGER ']'

    LIT_INTEGER  shift, and go to state 29


state 25

   18 parametro: TK_IDENTIFIER . ':' tipo_var

    ':'  shift, and go to state 30


state 26

   13 def_funcao: TK_IDENTIFIER ':' tipo_var '(' lista_parametros . ')' comando ';'

    ')'  shift, and go to state 31


state 27

   14 lista_parametros: lista_param_nao_vazia .

    $default  reduce using rule 14 (lista_parametros)


state 28

   16 lista_param_nao_vazia: parametro . ',' lista_param_nao_vazia
   17                      | parametro .

    ','  shift, and go to state 32

    $default  reduce using rule 17 (lista_param_nao_vazia)


state 29

    8 decl_vetor: KW_DECLARE TK_IDENTIFIER ':' tipo_var '[' LIT_INTEGER . ']'

    ']'  shift, and go to state 33


state 30

   18 parametro: TK_IDENTIFIER ':' . tipo_var

    KW_INTEGER    shift, and go to state 17
    KW_FLOATING   shift, and go to state 18
    KW_BOOLEAN    shift, and go to state 19
    KW_CHARACTER  shift, and go to state 20

    tipo_var  go to state 34


state 31

   13 def_funcao: TK_IDENTIFIER ':' tipo_var '(' lista_parametros ')' . comando ';'

    KW_IF          shift, and go to state 35
    KW_WHILE       shift, and go to state 36
    KW_DO          shift, and go to state 37
    KW_INPUT       shift, and go to state 38
    KW_RETURN      shift, and go to state 39
    KW_OUTPUT      shift, and go to state 40
    TK_IDENTIFIER  shift, and go to state 41
    '{'            shift, and go to state 42

    $default  reduce using rule 25 (comando)

    comando         go to state 43
    bloco_comando   go to state 44
    atribuicao      go to state 45
    input           go to state 46
    output          go to state 47
    return          go to state 48
    controle_fluxo  go to state 49


state 32

   16 lista_param_nao_vazia: parametro ',' . lista_param_nao_vazia

    TK_IDENTIFIER  shift, and go to state 25

    lista_param_nao_vazia  go to state 50
    parametro              go to state 28


state 33

    8 decl_vetor: KW_DECLARE TK_IDENTIFIER ':' tipo_var '[' LIT_INTEGER ']' .

    $default  reduce using rule 8 (decl_vetor)


state 34

   18 parametro: TK_IDENTIFIER ':' tipo_var .

    $default  reduce using rule 18 (parametro)


state 35

   36 controle_fluxo: KW_IF . '(' expressao ')' KW_THEN comando
   37               | KW_IF . '(' expressao ')' KW_THEN comando KW_ELSE comando

    '('  shift, and go to state 51


state 36

   38 controle_fluxo: KW_WHILE . '(' expressao ')' comando

    '('  shift, and go to state 52


state 37

   39 controle_fluxo: KW_DO . comando KW_WHILE '(' expressao ')'

    KW_IF          shift, and go to state 35
    KW_WHILE       shift, and go to state 36
    KW_DO          shift, and go to state 37
    KW_INPUT       shift, and go to state 38
    KW_RETURN      shift, and go to state 39
    KW_OUTPUT      shift, and go to state 40
    TK_IDENTIFIER  shift, and go to state 41
    '{'            shift, and go to state 42

    KW_WHILE  [reduce using rule 25 (comando)]

    comando         go to state 53
    bloco_comando   go to state 44
    atribuicao      go to state 45
    input           go to state 46
    output          go to state 47
    return          go to state 48
    controle_fluxo  go to state 49


state 38

   31 input: KW_INPUT . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 54


state 39

   35 return: KW_RETURN . expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 63


state 40

   32 output: KW_OUTPUT . lista_expr_nao_vazia

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    lista_expr_nao_vazia  go to state 64
    expressao             go to state 65


state 41

   29 atribuicao: TK_IDENTIFIER . '=' expressao
   30           | TK_IDENTIFIER . '[' expressao ']' '=' expressao

    '['  shift, and go to state 66
    '='  shift, and go to state 67


state 42

   26 bloco_comando: '{' . seq_comando '}'

    KW_IF          shift, and go to state 35
    KW_WHILE       shift, and go to state 36
    KW_DO          shift, and go to state 37
    KW_INPUT       shift, and go to state 38
    KW_RETURN      shift, and go to state 39
    KW_OUTPUT      shift, and go to state 40
    TK_IDENTIFIER  shift, and go to state 41
    '{'            shift, and go to state 42

    $default  reduce using rule 25 (comando)

    comando         go to state 68
    bloco_comando   go to state 44
    seq_comando     go to state 69
    atribuicao      go to state 45
    input           go to state 46
    output          go to state 47
    return          go to state 48
    controle_fluxo  go to state 49


state 43

   13 def_funcao: TK_IDENTIFIER ':' tipo_var '(' lista_parametros ')' comando . ';'

    ';'  shift, and go to state 70


state 44

   19 comando: bloco_comando .

    $default  reduce using rule 19 (comando)


state 45

   21 comando: atribuicao .

    $default  reduce using rule 21 (comando)


state 46

   22 comando: input .

    $default  reduce using rule 22 (comando)


state 47

   23 comando: output .

    $default  reduce using rule 23 (comando)


state 48

   24 comando: return .

    $default  reduce using rule 24 (comando)


state 49

   20 comando: controle_fluxo .

    $default  reduce using rule 20 (comando)


state 50

   16 lista_param_nao_vazia: parametro ',' lista_param_nao_vazia .

    $default  reduce using rule 16 (lista_param_nao_vazia)


state 51

   36 controle_fluxo: KW_IF '(' . expressao ')' KW_THEN comando
   37               | KW_IF '(' . expressao ')' KW_THEN comando KW_ELSE comando

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 71


state 52

   38 controle_fluxo: KW_WHILE '(' . expressao ')' comando

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 72


state 53

   39 controle_fluxo: KW_DO comando . KW_WHILE '(' expressao ')'

    KW_WHILE  shift, and go to state 73


state 54

   31 input: KW_INPUT TK_IDENTIFIER .

    $default  reduce using rule 31 (input)


state 55

   40 expressao: TK_IDENTIFIER .
   41          | TK_IDENTIFIER . '[' expressao ']'
   61          | TK_IDENTIFIER . '(' lista_expressoes ')'

    '['  shift, and go to state 74
    '('  shift, and go to state 75

    $default  reduce using rule 40 (expressao)


state 56

   42 expressao: LIT_INTEGER .

    $default  reduce using rule 42 (expressao)


state 57

   43 expressao: LIT_FLOATING .

    $default  reduce using rule 43 (expressao)


state 58

   44 expressao: LIT_FALSE .

    $default  reduce using rule 44 (expressao)


state 59

   45 expressao: LIT_TRUE .

    $default  reduce using rule 45 (expressao)


state 60

   46 expressao: LIT_CHARACTER .

    $default  reduce using rule 46 (expressao)


state 61

   47 expressao: LIT_STRING .

    $default  reduce using rule 47 (expressao)


state 62

   54 expressao: '(' . expressao ')'

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 76


state 63

   35 return: KW_RETURN expressao .
   48 expressao: expressao . '+' expressao
   49          | expressao . '-' expressao
   50          | expressao . '*' expressao
   51          | expressao . '/' expressao
   52          | expressao . '<' expressao
   53          | expressao . '>' expressao
   55          | expressao . OPERATOR_LE expressao
   56          | expressao . OPERATOR_GE expressao
   57          | expressao . OPERATOR_EQ expressao
   58          | expressao . OPERATOR_NE expressao
   59          | expressao . OPERATOR_AND expressao
   60          | expressao . OPERATOR_OR expressao

    OPERATOR_LE   shift, and go to state 77
    OPERATOR_GE   shift, and go to state 78
    OPERATOR_EQ   shift, and go to state 79
    OPERATOR_NE   shift, and go to state 80
    OPERATOR_AND  shift, and go to state 81
    OPERATOR_OR   shift, and go to state 82
    '<'           shift, and go to state 83
    '>'           shift, and go to state 84
    '+'           shift, and go to state 85
    '-'           shift, and go to state 86
    '*'           shift, and go to state 87
    '/'           shift, and go to state 88

    $default  reduce using rule 35 (return)


state 64

   32 output: KW_OUTPUT lista_expr_nao_vazia .

    $default  reduce using rule 32 (output)


state 65

   33 lista_expr_nao_vazia: expressao . ',' lista_expr_nao_vazia
   34                     | expressao .
   48 expressao: expressao . '+' expressao
   49          | expressao . '-' expressao
   50          | expressao . '*' expressao
   51          | expressao . '/' expressao
   52          | expressao . '<' expressao
   53          | expressao . '>' expressao
   55          | expressao . OPERATOR_LE expressao
   56          | expressao . OPERATOR_GE expressao
   57          | expressao . OPERATOR_EQ expressao
   58          | expressao . OPERATOR_NE expressao
   59          | expressao . OPERATOR_AND expressao
   60          | expressao . OPERATOR_OR expressao

    OPERATOR_LE   shift, and go to state 77
    OPERATOR_GE   shift, and go to state 78
    OPERATOR_EQ   shift, and go to state 79
    OPERATOR_NE   shift, and go to state 80
    OPERATOR_AND  shift, and go to state 81
    OPERATOR_OR   shift, and go to state 82
    '<'           shift, and go to state 83
    '>'           shift, and go to state 84
    '+'           shift, and go to state 85
    '-'           shift, and go to state 86
    '*'           shift, and go to state 87
    '/'           shift, and go to state 88
    ','           shift, and go to state 89

    $default  reduce using rule 34 (lista_expr_nao_vazia)


state 66

   30 atribuicao: TK_IDENTIFIER '[' . expressao ']' '=' expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 90


state 67

   29 atribuicao: TK_IDENTIFIER '=' . expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 91


state 68

   27 seq_comando: comando .
   28            | comando . ';' seq_comando

    ';'  shift, and go to state 92

    $default  reduce using rule 27 (seq_comando)


state 69

   26 bloco_comando: '{' seq_comando . '}'

    '}'  shift, and go to state 93


state 70

   13 def_funcao: TK_IDENTIFIER ':' tipo_var '(' lista_parametros ')' comando ';' .

    $default  reduce using rule 13 (def_funcao)


state 71

   36 controle_fluxo: KW_IF '(' expressao . ')' KW_THEN comando
   37               | KW_IF '(' expressao . ')' KW_THEN comando KW_ELSE comando
   48 expressao: expressao . '+' expressao
   49          | expressao . '-' expressao
   50          | expressao . '*' expressao
   51          | expressao . '/' expressao
   52          | expressao . '<' expressao
   53          | expressao . '>' expressao
   55          | expressao . OPERATOR_LE expressao
   56          | expressao . OPERATOR_GE expressao
   57          | expressao . OPERATOR_EQ expressao
   58          | expressao . OPERATOR_NE expressao
   59          | expressao . OPERATOR_AND expressao
   60          | expressao . OPERATOR_OR expressao

    OPERATOR_LE   shift, and go to state 77
    OPERATOR_GE   shift, and go to state 78
    OPERATOR_EQ   shift, and go to state 79
    OPERATOR_NE   shift, and go to state 80
    OPERATOR_AND  shift, and go to state 81
    OPERATOR_OR   shift, and go to state 82
    '<'           shift, and go to state 83
    '>'           shift, and go to state 84
    '+'           shift, and go to state 85
    '-'           shift, and go to state 86
    '*'           shift, and go to state 87
    '/'           shift, and go to state 88
    ')'           shift, and go to state 94


state 72

   38 controle_fluxo: KW_WHILE '(' expressao . ')' comando
   48 expressao: expressao . '+' expressao
   49          | expressao . '-' expressao
   50          | expressao . '*' expressao
   51          | expressao . '/' expressao
   52          | expressao . '<' expressao
   53          | expressao . '>' expressao
   55          | expressao . OPERATOR_LE expressao
   56          | expressao . OPERATOR_GE expressao
   57          | expressao . OPERATOR_EQ expressao
   58          | expressao . OPERATOR_NE expressao
   59          | expressao . OPERATOR_AND expressao
   60          | expressao . OPERATOR_OR expressao

    OPERATOR_LE   shift, and go to state 77
    OPERATOR_GE   shift, and go to state 78
    OPERATOR_EQ   shift, and go to state 79
    OPERATOR_NE   shift, and go to state 80
    OPERATOR_AND  shift, and go to state 81
    OPERATOR_OR   shift, and go to state 82
    '<'           shift, and go to state 83
    '>'           shift, and go to state 84
    '+'           shift, and go to state 85
    '-'           shift, and go to state 86
    '*'           shift, and go to state 87
    '/'           shift, and go to state 88
    ')'           shift, and go to state 95


state 73

   39 controle_fluxo: KW_DO comando KW_WHILE . '(' expressao ')'

    '('  shift, and go to state 96


state 74

   41 expressao: TK_IDENTIFIER '[' . expressao ']'

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 97


state 75

   61 expressao: TK_IDENTIFIER '(' . lista_expressoes ')'

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    $default  reduce using rule 63 (lista_expressoes)

    lista_expr_nao_vazia  go to state 98
    expressao             go to state 65
    lista_expressoes      go to state 99


state 76

   48 expressao: expressao . '+' expressao
   49          | expressao . '-' expressao
   50          | expressao . '*' expressao
   51          | expressao . '/' expressao
   52          | expressao . '<' expressao
   53          | expressao . '>' expressao
   54          | '(' expressao . ')'
   55          | expressao . OPERATOR_LE expressao
   56          | expressao . OPERATOR_GE expressao
   57          | expressao . OPERATOR_EQ expressao
   58          | expressao . OPERATOR_NE expressao
   59          | expressao . OPERATOR_AND expressao
   60          | expressao . OPERATOR_OR expressao

    OPERATOR_LE   shift, and go to state 77
    OPERATOR_GE   shift, and go to state 78
    OPERATOR_EQ   shift, and go to state 79
    OPERATOR_NE   shift, and go to state 80
    OPERATOR_AND  shift, and go to state 81
    OPERATOR_OR   shift, and go to state 82
    '<'           shift, and go to state 83
    '>'           shift, and go to state 84
    '+'           shift, and go to state 85
    '-'           shift, and go to state 86
    '*'           shift, and go to state 87
    '/'           shift, and go to state 88
    ')'           shift, and go to state 100


state 77

   55 expressao: expressao OPERATOR_LE . expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 101


state 78

   56 expressao: expressao OPERATOR_GE . expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 102


state 79

   57 expressao: expressao OPERATOR_EQ . expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 103


state 80

   58 expressao: expressao OPERATOR_NE . expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 104


state 81

   59 expressao: expressao OPERATOR_AND . expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 105


state 82

   60 expressao: expressao OPERATOR_OR . expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 106


state 83

   52 expressao: expressao '<' . expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 107


state 84

   53 expressao: expressao '>' . expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 108


state 85

   48 expressao: expressao '+' . expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 109


state 86

   49 expressao: expressao '-' . expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 110


state 87

   50 expressao: expressao '*' . expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 111


state 88

   51 expressao: expressao '/' . expressao

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    expressao  go to state 112


state 89

   33 lista_expr_nao_vazia: expressao ',' . lista_expr_nao_vazia

    TK_IDENTIFIER  shift, and go to state 55
    LIT_INTEGER    shift, and go to state 56
    LIT_FLOATING   shift, and go to state 57
    LIT_FALSE      shift, and go to state 58
    LIT_TRUE       shift, and go to state 59
    LIT_CHARACTER  shift, and go to state 60
    LIT_STRING     shift, and go to state 61
    '('            shift, and go to state 62

    lista_expr_nao_vazia  go to state 113
    expressao             go to state 65


state 90
